--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 # DATABASE
+## SQLYog ?? ??? ??? ????? ???, ??? ?????.
 spring.h2.console.enabled=true
+## ??? URL
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:~/local
+## DB ??? ??, ???? ????? mySql? ???? ?? '??'??
+spring.datasource.url=jdbc:h2:~/local;Mode=MYSQL
+## ???? ????
 spring.datasource.driverClassName=org.h2.Driver
+## DB ID: sa ??? ????? ????.
 spring.datasource.username=sa
+## DB ID: sa ??? ????? ?? ??.
 spring.datasource.password=
