--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.h2.console.enabled=true
 ## ??? URL
 spring.h2.console.path=/h2-console
 ## DB ??? ??, ???? ????? mySql? ???? ?? '??'??
-spring.datasource.url=jdbc:h2:~/local;Mode=MYSQL
+spring.datasource.url=jdbc:h2:~/local;MODE=MariaDB
 ## ???? ????
 spring.datasource.driverClassName=org.h2.Driver
 ## DB ID: sa ??? ????? ????.
