--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,9 @@
 # DATABASE
-## SQLYog ?? ??? ??? ????? ???, ??? ?????.
-spring.h2.console.enabled=true
-## ??? URL
-spring.h2.console.path=/h2-console
-## DB ??? ??, ???? ????? mySql? ???? ?? '??'??
-spring.datasource.url=jdbc:h2:~/local;MODE=MariaDB
-## ???? ????
-spring.datasource.driverClassName=org.h2.Driver
-## DB ID: sa ??? ????? ????.
-spring.datasource.username=sa
-## DB ID: sa ??? ????? ?? ??.
-spring.datasource.password=
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/qna?useUnicode=true&characterEncoding=utf8&serverTimeZone=Asia/Seoul
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.username=lldj
+spring.datasource.password=lldj1234
 # JPA
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 ##sql?? ???.
 spring.jpa.properties.hibernate.format_sql=true
