--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-# DATABASE
-spring.datasource.url=jdbc:mariadb://localhost:3306/qna?useUnicode=true&characterEncoding=utf8&serverTimeZone=Asia/Seoul
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.username=lldj
-spring.datasource.password=lldj1234
-# JPA
-spring.jpa.hibernate.ddl-auto=update
-##sql?? ???.
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true 
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=nia
+spring.datasource.password=nia1234
+spring.datasource.url=jdbc:mariadb://localhost:3306/qna
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
